name:                pure-media-library
version:             0.8.0.0
homepage:            purehs.org/doc/pure-media-library
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-media-library.git

library
  exposed-modules:
      Pure.Media.Library
    , Pure.Media.Library.API
    , Pure.Media.Library.Browser
    , Pure.Media.Library.Data.Library
    , Pure.Media.Library.Data.Media
    , Pure.Media.Library.Browser.Upload
    
  build-depends:
    base,
    pure-elm,
    pure-txt,
    pure-intersection,
    pure-json,
    pure-lifted,
    pure-readfile,
    pure-stream,
    pure-sync,
    pure-time,
    pure-websocket,
    sorcerer,
    directory,
    filepath,
    hashable

  if !impl(ghcjs)
    exposed-modules:
      Pure.Media.Library.GHC.Library

  hs-source-dirs:      src
  default-language:    Haskell2010
